--- a/public/css/403.css
+++ b/public/css/403.css
@@ -1,6 +1,6 @@
 @import url(https://fonts.googleapis.com/css?family=opensans:500);
 body{
-                background: #FA7A50;
+                background: #9f81f7;
                 color:#fff;
                 font-family: 'Open Sans', sans-serif;
                 max-height:700px;
