--- a/public/css/tags.css
+++ b/public/css/tags.css
@@ -1,5 +1,5 @@
-.item{color:#FF3636; margin-top:30px; overflow:hidden;}
-.block-title{color: #FF3636; margin-bottom:0px; font-size:18px; margin-top: 0px; font-weight:700; text-transform:uppercase;}
+.item{color:#9f81f7; margin-top:30px; overflow:hidden;}
+.block-title{color: #9f81f7; margin-bottom:0px; font-size:18px; margin-top: 0px; font-weight:700; text-transform:uppercase;}
 .item-content-block{padding:0px; background-color:#FFF; display:block;}
-.tags a{background-color:#FF3636; padding:10px; color:#fff; display:inline-block; font-size:11px; text-transform:uppercase; line-height:11px; border-radius:2px; margin-bottom:5px; margin-right:2px; text-decoration:none;}
-.tags a:hover{background-color:#D52E2A;}
+.tags a{background-color:#9f81f7; padding:10px; color:#fff; display:inline-block; font-size:11px; text-transform:uppercase; line-height:11px; border-radius:2px; margin-bottom:5px; margin-right:2px; text-decoration:none;}
+.tags a:hover{background-color:#9f81f7;}
